# LLM-Council

./: AI_updates.txt  README.md  finance_council_prompts.html  prompt.txt  pyproject.toml  start.sh  todo.md  todolist.txt
backend/: config.py  council.py  documents.py  groq_client.py  image_gen.py  main.py  openrouter.py  settings_manager.py  storage.py  web_scraper.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  CouncilSettings.css  CouncilSettings.jsx  MarkdownRenderer.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
